--- a/P1_Robot_Controller/Robot Controller.html
+++ b/P1_Robot_Controller/Robot Controller.html
@@ -11851,7 +11851,7 @@ div#notebook {
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>maze-id 1-1536317736
+<pre>maze-id 1-1536389914
 [[3, 2, 2, 2, 2, 2, 2, 2, 1],
  [0, 0, 2, 2, 2, 2, 2, 0, 0],
  [2, 0, 0, 2, 2, 2, 0, 0, 2],
@@ -12029,10 +12029,21 @@ OK
 <div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">loc_map</span> <span class="o">=</span> <span class="p">{</span>
-    <span class="s1">&#39;start&#39;</span><span class="p">:(</span><span class="mi">0</span><span class="p">,</span><span class="mi">8</span><span class="p">),</span>
-    <span class="s1">&#39;destination&#39;</span><span class="p">:(</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">)</span>
-<span class="p">}</span> <span class="c1">#TODO 6按照上述要求创建字典</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># 使用review的建议，起点和终点位置动态获取，不固定写死在代码中。</span>
+<span class="c1"># 定义起点/终点常量</span>
+<span class="n">START_VAL</span> <span class="o">=</span> <span class="mi">1</span>
+<span class="n">END_VAL</span> <span class="o">=</span> <span class="mi">3</span>
+<span class="c1"># 获取机器人起点/终点坐标</span>
+<span class="k">def</span> <span class="nf">get_location</span><span class="p">(</span><span class="n">world</span><span class="p">,</span> <span class="n">value</span><span class="p">):</span>
+    <span class="k">for</span> <span class="n">x</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">rows</span><span class="p">):</span>
+        <span class="k">for</span> <span class="n">y</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">columns</span><span class="p">):</span>
+            <span class="k">if</span> <span class="n">world</span><span class="p">[</span><span class="n">x</span><span class="p">][</span><span class="n">y</span><span class="p">]</span> <span class="o">==</span> <span class="n">value</span><span class="p">:</span>
+                <span class="k">return</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">)</span>
+<span class="c1">#TODO 6按照上述要求创建字典</span>
+<span class="n">loc_map</span> <span class="o">=</span> <span class="p">{</span>
+    <span class="s1">&#39;start&#39;</span><span class="p">:</span> <span class="n">get_location</span><span class="p">(</span><span class="n">env_data</span><span class="p">,</span> <span class="n">START_VAL</span><span class="p">),</span>
+    <span class="s1">&#39;destination&#39;</span><span class="p">:</span> <span class="n">get_location</span><span class="p">(</span><span class="n">env_data</span><span class="p">,</span> <span class="n">END_VAL</span><span class="p">)</span>
+<span class="p">}</span>
 
 <span class="n">robot_current_loc</span> <span class="o">=</span> <span class="n">loc_map</span><span class="p">[</span><span class="s1">&#39;start&#39;</span><span class="p">]</span> <span class="c1">#TODO 7保存机器人当前的位置</span>
 </pre></div>
@@ -12066,7 +12077,7 @@ OK
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>.
 ----------------------------------------------------------------------
-Ran 1 test in 0.001s
+Ran 1 test in 0.002s
 
 OK
 </pre>
@@ -12165,7 +12176,7 @@ OK
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>.
 ----------------------------------------------------------------------
-Ran 1 test in 0.001s
+Ran 1 test in 0.002s
 
 OK
 </pre>
@@ -12250,7 +12261,7 @@ OK
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>.
 ----------------------------------------------------------------------
-Ran 1 test in 0.001s
+Ran 1 test in 0.003s
 
 OK
 </pre>
@@ -12281,8 +12292,8 @@ OK
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>问题1:第一个env_data是引用了全局变量，第二个env_data因为和参数同名，所以在作用域上覆盖了全局的env_data</p>
-<p>问题2:不会，因为env_data_和env_data是两个不同的变量</p>
+<p>问题1:第一个env_data是引用了全局变量，第二个env_data因为和参数同名，所以在作用域上覆盖了全局的env_data。</p>
+<p>问题2:会改变env_data_的值，因为列表是可变类型，当把env_data作为参数传入is_move_valid后，实际上env_data和env_data_都引用同一块内存区域，所以会改变env_data_的值。</p>
 
 </div>
 </div>
@@ -12347,7 +12358,7 @@ OK
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>.
 ----------------------------------------------------------------------
-Ran 1 test in 0.001s
+Ran 1 test in 0.002s
 
 OK
 </pre>
@@ -12420,7 +12431,7 @@ OK
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>.
 ----------------------------------------------------------------------
-Ran 1 test in 0.001s
+Ran 1 test in 0.002s
 
 OK
 </pre>
@@ -12496,7 +12507,7 @@ OK
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>在第245个回合找到宝藏！
+<pre>在第283个回合找到宝藏！
 </pre>
 </div>
 </div>
